--- a/index.Rmd
+++ b/index.Rmd
@@ -1,30 +1,185 @@
 ---
-title: "Forecast Averaging Project"
+title: "Forecasting Inflation"
 author: "Caitlin Brown"
-date: "4/9/2022"
-output: html_document
+date: "`r format(Sys.Date(),'%B %d, %Y')`"
+output:
+  html_document:
+    df_print: paged
+    code_folding: hide
+    toc: no
+    fig_caption: yes
+    theme: cerulean
+    toc_float: no
+    pdf_document: default
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r setup, include = FALSE}
+rm(list=ls())
+graphics.off()
+knitr::opts_chunk$set(echo=TRUE, message=FALSE, warning=FALSE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+If you've felt the price of milk and groceries has been on the rise this 
+The goal of this study will be to frecast inflaiton over a 12 year period using data from FRED, the Federal Reserve Economic Database, 
+```{r loadPackages, message = FALSE}
+require(fpp3)
+require(tsibble)
+require(tidyverse)
+require(tidyquant)
+require(lubridate)
+require(timetk)
+require(kableExtra)
+require(reshape2)
+require(ggplot2)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r uploaddata}
+Variablelist<- c("PCEPI", "UNRATE", "MICH", "IPMAN", "EXPINF1YR")
+x<- tq_get (Variablelist, get = "economic.data", from = "1982-01-01") %>%
+    mutate(Date= yearmonth(date), value= price) %>%
+    select(-c(date, price)) %>%
+    as_tsibble(index = Date, key = symbol)
+Xwide<- x %>%
+    pivot_wider(names_from = symbol, values_from = value) %>%
+    as_tsibble()
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r mutate data, message=FALSE}
+z <- Xwide %>% select(c(PCEPI, UNRATE, MICH, IPMAN, EXPINF1YR)) %>%
+  mutate(infl = 1200*log(PCEPI/lag(PCEPI))) %>%
+  mutate(dinfl = infl - lag(infl, 1)) %>%
+  mutate(dinfl12 = 100*log(PCEPI/lag(PCEPI,12)) - lag(infl,12))%>%
+  mutate(Unrate = UNRATE - lag(UNRATE))%>%
+  mutate(Mich = 10*log(MICH/lag(MICH)))%>%
+  mutate(Ipman = 1200*log(IPMAN/lag(IPMAN))) %>%
+  mutate(Expinf1yr = EXPINF1YR - lag(EXPINF1YR)) %>%
+  select(-c(PCEPI, UNRATE, MICH, IPMAN, EXPINF1YR)) %>% 
+  drop_na()
+  
+
+train_data<- z %>% filter_index(~ "2018-12-01")
+test_data<- z %>% filter_index("2019-01-01" ~ .)
+```
+
+```{r, melt}
+zm <- melt(z, "Date")
+ggplot(zm, aes(Date, value)) + 
+  geom_line() + 
+  facet_wrap(~variable, scales = "free", ncol = 2)
+```
+
+```{r, TrainData}
+fitPhillipsc<- train_data %>%
+  model(
+    mPC = TSLM(dinfl12 ~ 1 +
+                 lag(dinfl,12) + lag(dinfl, 13) + lag(dinfl,14) +
+                 lag(dinfl,15) + lag(dinfl,16) + lag(dinfl,17)+
+                 lag(dinfl,18) + lag(dinfl,19) + lag(dinfl,20)+
+                 lag(dinfl,21) + lag(dinfl,22) + lag(dinfl,23)+
+                 lag(Unrate,12) + lag(Unrate,13) + lag(Unrate,14)+
+                 lag(Unrate,15) + lag(Unrate,16) + lag(Unrate,17)+
+                 lag(Unrate,18) + lag(Unrate,19) + lag(Unrate,20)+
+                 lag(Unrate,21) + lag(Unrate,22) + lag(Unrate,23)
+               )
+  )
+report(fitPhillipsc)
+```
+
+```{r, include=FALSE}
+gg_tsresiduals(fitPhillipsc)
+```
+
+```{r}
+fitall <- train_data %>%
+  model(
+    mUNRATE= TSLM(dinfl12 ~ 1 +
+                 lag(dinfl,12) + lag(dinfl,13) + lag(dinfl,14) +
+                 lag(dinfl,15) + lag(dinfl,16) + lag(dinfl,17) +
+                 lag(dinfl,18) + lag(dinfl,19) + lag(dinfl,20) +
+                 lag(dinfl,21) + lag(dinfl,22) + lag(dinfl,23) +
+                 lag(Unrate,12) + lag(Unrate,13) + lag(Unrate,14) +
+                 lag(Unrate,15) + lag(Unrate,16) + lag(Unrate,17) +
+                 lag(Unrate,18) + lag(Unrate,19) + lag(Unrate,20) +
+                 lag(Unrate,21) + lag(Unrate,22) + lag(Unrate,23) 
+                 ),
+    mMICH= TSLM(dinfl12 ~ 1 +
+                 lag(dinfl,12) + lag(dinfl,13) + lag(dinfl,14) +
+                 lag(dinfl,15) + lag(dinfl,16) + lag(dinfl,17) +
+                 lag(dinfl,18) + lag(dinfl,19) + lag(dinfl,20) +
+                 lag(infl,21) + lag(dinfl,22) + lag(dinfl,23) +
+                 lag(Mich,12) + lag(Mich,13) + lag(Mich,14) +
+                 lag(Mich,15) + lag(Mich,16) + lag(Mich,17) +
+                 lag(Mich,18) + lag(Mich,19) + lag(Mich,20) +
+                 lag(Mich,21) + lag(Mich,22) + lag(Mich,23) 
+                 ),
+    mIPMAN= TSLM(dinfl12 ~ 1 +
+                    lag(dinfl,12) + lag(dinfl,13) + lag(dinfl,14) +
+                    lag(dinfl,15) + lag(dinfl,16) + lag(dinfl,17) +
+                    lag(dinfl,18) + lag(dinfl,19) + lag(dinfl,20) +
+                    lag(dinfl,21) + lag(dinfl,22) + lag(dinfl,23) +
+                    lag(Ipman,12) + lag(Ipman,13)+ lag(Ipman,14) + lag(Ipman,15) +
+                    lag(Ipman,16) + lag(Ipman,17) + lag(Ipman,18) + lag(Ipman,19) +
+                    lag(Ipman,20) + lag(Ipman, 21) + lag(Ipman,22) + lag(Ipman,23)
+                  ),
+    mEXP = TSLM(dinfl12 ~ 1 +
+                 lag(dinfl,12) + lag(dinfl,13) + lag(dinfl,14) +
+                 lag(dinfl,15) + lag(dinfl,16) + lag(dinfl,17) +
+                 lag(dinfl,18) + lag(dinfl,19) + lag(dinfl,20) +
+                 lag(dinfl,21) + lag(dinfl,22) + lag(dinfl,23) +
+                 lag(Expinf1yr,12) + lag(Expinf1yr,13) + lag(Expinf1yr,14) +
+                 lag(Expinf1yr,15) + lag(Expinf1yr,16) + lag(Expinf1yr,17) +
+                 lag(Expinf1yr,18) + lag(Expinf1yr,19) + lag(Expinf1yr,20) +
+                 lag(Expinf1yr,21) + lag(Expinf1yr,22) + lag(Expinf1yr,23) 
+                 ) 
+  )
+tidy(fitall)
+```
+```{r Accuracy}
+accuracy(fitall)
+```
+We can see mMICH has the lowest mae, mase, and rmse
+selecting it to observe on its own we se this does not mean the model is of best fit
+
+```{r Accuracy}
+fitall %>% select(mMICH) %>% report()
+```
+```{r MICH residuals,warning= FALSE}
+fitall %>% select(mMICH) %>% gg_tsresiduals()
+```
+
+```{r combomodel}
+fc_combo <- fitall %>% mutate(combo = (mUNRATE + mMICH + mIPMAN + mEXP)/4)
+```
+```{r graph}
+forecastFit <- fc_combo%>% forecast(new_data = test_data)
+forecastFit %>% autoplot(filter(z, year(Date) > 2016), level = c(95)) +
+  labs(caption = "Time Series data taken from FRED database", aes(color = "blue")) + 
+   labs(title = "Time Series Linear Model Forecast") +
+  ylab("Inflation Rate (measured in percent)") +
+  xlab("Month")
+```
+
+```{r comapare accuracy of all models, in sample }
+accuracy(fitCombo)
+```
+
+```{r comapare accuracy of all models, out of sample}
+accuracy(forecastFit, z)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
